[package]
name = "effectum"
description = "An embeddable task queue based on SQLite"
version = "0.7.0"
authors = ["Daniel Imfeld"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dimfeld/effectum"
keywords = ["job", "task", "queue", "sqlite"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
backoff = "0.4.0"
chrono = { version = "0.4.31", default-features = false }
cron = "0.12.0"
deadpool-sqlite = "0.8.1"
eyre = "0.6.8"
futures = "0.3.28"
once_cell = "1.18.0"
rand = "0.8.5"
rusqlite = { version = "0.31.0", features = ["functions", "modern-full", "time", "blob", "array"] }
rusqlite_migration = "1.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
smallvec = { version = "1.11.1", features = ["serde"] }
smartstring = "1.0.1"
thiserror = "1"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "time", "sync"] }
tracing = "0.1.37"
uuid = { version = "1.7.0", features = ["v7", "serde"] }

[dev-dependencies]
color-eyre = "0.6.2"
once_cell = "1.18.0"
rand = "0.8.5"
temp-dir = "0.1.11"
tokio = { version = "1.32.0", features = ["rt", "macros", "time", "sync", "test-util"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
tracing-tree = "0.2.4"

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["rusqlite/bundled"]
