[package]
name = "local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = "0.4.0"
futures = "0.3.24"
once_cell = "1.15.0"
rusqlite = { version = "0.28.0", features = ["modern-full", "time", "blob"] }
rusqlite_migration = "1.0.0"
smartstring = "1.0.1"
thiserror = "1.0.37"
time = "0.3.14"
tokio = { version = "1.21.2", features = ["macros", "time", "sync"] }
uuid = "1.1.2"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["rt", "macros", "time", "sync"] }

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["rusqlite/bundled"]
