[package]
name = "prefect"
description = "An embeddable task queue based on SQLite"
version = "0.1.3"
authors = ["Daniel Imfeld"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dimfeld/prefect"
keywords = ["job", "task", "queue", "sqlite"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.0"
backoff = "0.4.0"
deadpool-sqlite = "0.5.0"
eyre = "0.6.8"
futures = "0.3.24"
once_cell = "1.15.0"
rand = "0.8.5"
rusqlite = { version = "0.28.0", features = ["functions", "modern-full", "time", "blob", "array"] }
rusqlite_migration = "1.0.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["raw_value"] }
smallvec = { version = "1.10.0", features = ["serde"] }
smartstring = "1.0.1"
thiserror = "1.0.37"
time = { version = "0.3.16", features = ["serde"] }
tokio = { version = "1.21.2", features = ["rt", "macros", "time", "sync"] }
tracing = "0.1.37"
ulid = { version = "1.0.0", features = ["uuid"] }
uuid = "1.1.2"

[dev-dependencies]
once_cell = "1.15.0"
temp-dir = "0.1.11"
tokio = { version = "1.21.2", features = ["rt", "macros", "time", "sync", "test-util"] }
tracing-subscriber = "0.3.16"
tracing-tree = "0.2.1"

[features]
default = ["bundled-sqlite"]
bundled-sqlite = ["rusqlite/bundled"]
