[package]
name = "prefect_stress_test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.25"
prefect = { path = "../prefect" }
temp-dir = "0.1.11"
tokio = { version = "1.21.2", features = ["rt", "macros", "time", "sync"] }
tracing = "0.1.37"
ulid = { version = "1.0.0", features = ["uuid"] }
uuid = "1.1.2"

[dev-dependencies]
once_cell = "1.15.0"
tokio = { version = "1.21.2", features = ["rt", "macros", "time", "sync", "test-util"] }
tracing-subscriber = "0.3.16"
tracing-tree = "0.2.1"

[features]
rt-multi-thread = ["tokio/rt-multi-thread"]
