[package]
name = "effectum_stress_test"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
futures = "0.3.28"
effectum = { path = "../effectum" }
temp-dir = "0.1.11"
tokio = { version = "1.29.1", features = ["rt", "macros", "time", "sync"] }
tracing = "0.1.37"
ulid = { version = "1.0.0", features = ["uuid"] }
uuid = "1.4.1"

[dev-dependencies]
once_cell = "1.18.0"
tokio = { version = "1.29.1", features = ["rt", "macros", "time", "sync", "test-util"] }
tracing-subscriber = "0.3.17"
tracing-tree = "0.2.4"

[features]
rt-multi-thread = ["tokio/rt-multi-thread"]
